//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Users {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  locations Locations [not null]
}

Table Locations {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  lat Float [not null]
  lon Float [not null]
  name String [not null]
  country String
  state String
  users Users [not null]
  weather Weathers
  weatherId Int [unique]

  indexes {
    (lat, lon) [unique]
  }
}

Table Weathers {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  current CurrentWeather
  currentId Int [unique]
  days DailyWeather [not null]
  locations Locations
}

Table CurrentWeather {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  dt Int [not null]
  current Json [not null]
  weather Weathers
}

Table DailyWeather {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  dt Int [not null]
  daily Json [not null]
  weather Weathers
  weatherId Int
}

Ref: Locations.weatherId - Weathers.id

Ref: Weathers.currentId - CurrentWeather.id

Ref: DailyWeather.weatherId > Weathers.id [delete: Cascade]